# waylandcraft

./: flake.nix
native/: Cargo.toml
native/src/: bridge.rs  ddm.rs  lib.rs  main.rs  svg.rs  xdg_spec.rs
src/: main.rs
src/main/java/dev/evvie/waylandcraft/: WaylandCraft.java  WindowDisplay.java
src/main/java/dev/evvie/waylandcraft/bridge/: WaylandCraftBridge.java
src/main/java/dev/evvie/waylandcraft/desktop/: DesktopEntry.java  XDGDesktopManager.java
src/main/java/dev/evvie/waylandcraft/grabs/: DNDGrab.java  MoveGrab.java  PointerGrab.java  PointerGrabMap.java  ResizeGrab.java  WindowGrab.java
src/main/java/dev/evvie/waylandcraft/gui/: AppLauncherScreen.java  WaylandHudRenderer.java  WindowManagerScreen.java
src/main/java/dev/evvie/waylandcraft/mixin/: KeyboardHandlerMixin.java  NativeImageMixin.java
src/main/java/dev/evvie/waylandcraft/render/: RenderUtils.java  WindowFramebuffer.java  WindowInHandRenderer.java
src/main/resources/: waylandcraft.mixins.json
src/main/resources/assets/waylandcraft/shaders/core/: rendertype_window_colorless_cutout.fsh  rendertype_window_colorless_cutout.json  rendertype_window_cutout.fsh  rendertype_window_cutout.json
